fix: pokedex list overlap problem and adjust to smaller screens

--- a/src/global.css
+++ b/src/global.css
@@ -611,8 +611,8 @@ section.pk-selector-tray {
 .pk-dex-card {
 	display: flex;
 	flex-direction: column;
-	max-height: 300px;
-	width: 220px;
+	height: 320px;
+	width: 240px;
 	position: relative;
 	padding: 0 6px 0;
 
@@ -651,7 +651,7 @@ section.pk-selector-tray {
 	background-size: cover;
 	background-position: center;
 	width: 100%;
-	height: 150px;
+	height: 100%;
 	position: relative;
 	image-rendering: auto;
 
